--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
+    "gulp-uncss": "^1.0.6",
     "gulp-webp": "^4.0.1",
     "jquery": "^3.2",
     "laravel-mix": "^4.0.7",
