--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "laravel-mix": "^4.0.7",
     "lodash": "^4.17.5",
     "node-normalize-scss": "^8.0.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "popper.js": "^1.12",
+    "postcss-uncss": "^0.17.0",
     "resolve-url-loader": "^2.3.1",
     "sass": "^1.15.2",
     "sass-loader": "^7.1.0",
