--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "devDependencies": {
     "axios": "^0.18",
-    "bootstrap": "^4.1.0",
+    "bootstrap": "^4.5.3",
     "browser-sync": "^2.26.13",
-    "critical": "^1.3.6",
+    "critical": "^2.0.6",
     "cross-env": "^5.1",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
@@ -22,30 +22,31 @@
     "gulp-debug": "^4.0.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-postcss": "^8.0.0",
-    "gulp-requirejs": "^1.3.0",
-    "gulp-sass": "^4.0.2",
+    "gulp-requirejs": "^1.4.0",
+    "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
     "gulp-uncss": "^1.0.6",
     "gulp-webp": "^4.0.1",
-    "jquery": "^3.2",
-    "laravel-mix": "^4.0.7",
+    "jquery": "^3.5.1",
+    "laravel-mix": "^5.0.9",
     "lodash": "^4.17.20",
-    "node-normalize-scss": "^8.0.0",
+    "node-normalize-scss": "^8.1.2",
     "node-sass": "^4.14.1",
     "popper.js": "^1.12",
     "postcss-uncss": "^0.17.0",
-    "resolve-url-loader": "^2.3.1",
-    "sass": "^1.15.2",
+    "resolve-url-loader": "^3.1.2",
+    "sass": "^1.29.0",
     "sass-loader": "^7.1.0",
-    "vue": "^2.5.17"
+    "vue": "^2.6.12"
   },
   "dependencies": {
     "gulp-autoprefixer": "^6.1.0",
-    "gulp-cli": "^2.2.0",
+    "gulp-cli": "^2.3.0",
     "gulp-if": "^3.0.0",
-    "swiper": "^5.2.1",
-    "yargs": "^15.0.2"
+    "swiper": "^5.4.5",
+    "uncss": "^0.17.3",
+    "yargs": "^15.4.1"
   },
   "name": "my-package.local",
   "description": "<p align=\"center\"><img src=\"https://laravel.com/assets/img/components/logo-laravel.svg\"></p>",
