--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-debug": "^4.0.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-postcss": "^8.0.0",
+    "gulp-purgecss": "^3.0.0",
     "gulp-requirejs": "^1.4.0",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
@@ -44,6 +45,8 @@
     "gulp-autoprefixer": "^6.1.0",
     "gulp-cli": "^2.3.0",
     "gulp-if": "^3.0.0",
+    "gulp-rename": "^2.0.0",
+    "purgecss-from-html": "^3.0.0",
     "swiper": "^5.4.5",
     "uncss": "^0.17.3",
     "yargs": "^15.4.1"
